2013-02-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Add translation view helper with formal/informal salutation option
	* Cleanup configuration files
	* Add suggested HTML template insert (for pi_base)
	* Add captcha image and audio icon view helpers
	* Remove alias on SessionStorage class

2012-12-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Add captcha validator class

2012-12-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Migrate backend GD font maker to extbase

2012-11-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Move language labels to private resources directory
	* Migrate captcha image and audio generation to extbase

2012-11-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Move captcha media to private resources directory
	* Move javascript to public resources directory
	* Require TYPO3 6.0
	
2012-11-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Move original freecap to Contrib directory

2012-11-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fix font maker script character encoding

2012-11-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Migrate localization files to xliff
	* Migrate font maker module to the use of typo3/mod.php
	* Add ext_autoload

2012-03-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #32848: Captcha image expiry headers
	* Fixed bug #34729: Problems with encrypt function (Thanks to Carlos Meyer)
	* Updated version to 1.5.3

2011-12-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #7066: IE embeded media player display
	* Updated version to 1.5.0
	* Fixed bug #32604: BE module broken with TYPO3 4.6
	* Added feature #32610: Russian documentation (Thanks to Андрей Аксенов)
	* Updated version to 1.5.1
	* Follow-up to bug #32604: BE module broken with TYPO3 4.6
	* Updated version to 1.5.2

2011-12-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7066: IE embeded media player display
	* Added feature #32567: Use HTML5 audio tag when available
	* Follow-up to feature #32567: Use HTML5 audio tag when available