@@ -5,6 +5,7 @@
 	* Add suggested HTML template insert (for pi_base)
 	* Add captcha image and audio icon view helpers
 	* Remove alias on SessionStorage class
+	* Cleanup translation view helper
 
 2012-12-15  Stanislas Rolland  <typo3@sjbr.ca>
 
